# ion-gun-beam-physics

./: Areas_eta_0p64.xlsx  Bohm_Areas_0p64_0p7A.xlsx  Bohm_Current_Estimate.py  Bohm_Current_Plotter.py  Charge_Exchange_Estimate.py  beam-envelope-calculator.ipynb  pyproject.toml  test.xlsx  test2.xlsx  test3.xlsx
